--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -53,6 +53,9 @@
                 android:id="@+id/nav_influenza"
                 android:title="Influenza" />
             <item
+                android:id="@+id/nav_meningoACWY"
+                android:title="Meningocócica ACWY" />
+            <item
                 android:id="@+id/nav_meningo"
                 android:title="Meningocócica C" />
             <item
